# Skyrim-CleanSaveAutoReloader

./: CMakeLists.txt  README.md  vcpkg.json
cmake/: Plugin.h.in
src/SkyrimAutoReloader/: CMakeLists.txt  PCH.h  Plugin.h  main.cpp
src/SkyrimAutoReloaderHelper/: CMakeLists.txt  PCH.h  main.cpp
